# phoenixCRM2

./: README.md  core.py  main.py  models.py  pyproject.toml  sample_api_response.js  synthetic_historical_data.json  train.py  utils.py
conf/: config.yaml  data.yaml  model.yaml
tests/: conftest.py  test_core_logic.py  test_pipeline.py
tests/conf/: config.yaml
