[tool.poetry]
name = "redshield-phoenix"
version = "4.1.0"
description = "Proactive Emergency Response Platform with Production-Grade Architecture"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "~1.38.0"
pandas = "~2.2.3"
numpy = "~1.26.4"
scipy = "~1.13.1"
geopandas = "~1.0.1"
shapely = "~2.0.6"
networkx = "~3.3"
plotly = "~5.24.1"
folium = "~0.17.0"
streamlit-folium = "~0.22.0"
matplotlib = "~3.9.2"
reportlab = "~4.2.2"
requests = "~2.32.3"
hydra-core = "^1.3.2"  # <-- THIS LINE WAS MISSING. IT IS THE FIX.

# Optional ML dependencies
torch = { version = "~2.4.1", optional = true }
pgmpy = { version = "~0.1.26", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"
mlflow = "^2.9.0"
black = "^24.4.2"
ruff = "^0.5.5"

[tool.poetry.extras]
torch = ["torch"]
bayesian = ["pgmpy"]
full = ["torch", "pgmpy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 88
